[gd_scene load_steps=16 format=4 uid="uid://dhhpyohaddg7n"]

[ext_resource type="Texture2D" uid="uid://baqom0v8hiyuy" path="res://assets/Tilesets/Sand_tileset.png" id="1_p70h0"]
[ext_resource type="Script" uid="uid://big1ssno354so" path="res://scripts/world_1_2.gd" id="1_wjeva"]
[ext_resource type="Texture2D" uid="uid://bbdlwtnyjf6fv" path="res://assets/Tilesets/Stone_tileset.png" id="2_wjeva"]
[ext_resource type="PackedScene" uid="uid://dknvtslac01a5" path="res://scenes/portal.tscn" id="4_4m84a"]

[sub_resource type="TileMapPattern" id="TileMapPattern_6mqhf"]
tile_data = PackedInt32Array(0, 262145, 1, 65536, 196609, 2, 1, 65537, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_i4dot"]
tile_data = PackedInt32Array(0, 65537, 4, 1, 458753, 1, 65537, 196609, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_c81cj"]
tile_data = PackedInt32Array(0, 196609, 2, 65536, 262145, 4, 65537, 65537, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_bcyrs"]
tile_data = PackedInt32Array(65536, 65537, 4, 1, 196609, 2, 65537, 458753, 4)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_6mqhf"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_i4dot"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_c81cj"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4m84a"]
texture = ExtResource("1_p70h0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
3:0/0 = 0
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:0/0 = 0
4:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:0/0 = 0
5:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:0/0 = 0
6:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:0/0 = 0
7:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:0/0 = 0
8:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
9:0/0 = 0
9:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:1/0 = 0
6:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:1/0 = 0
7:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:1/0 = 0
8:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
9:1/0 = 0
9:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
0:2/0 = 0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:2/0 = 0
4:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:2/0 = 0
5:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:2/0 = 0
6:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:2/0 = 0
7:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:2/0 = 0
8:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6mqhf")
9:2/0 = 0
9:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
10:2/0 = 0
10:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
0:3/0 = 0
0:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
1:3/0 = 0
1:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
2:3/0 = 0
2:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
3:3/0 = 0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:3/0 = 0
4:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:3/0 = 0
5:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
6:3/0 = 0
6:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
7:3/0 = 0
7:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
8:3/0 = 0
8:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
9:3/0 = 0
9:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
10:3/0 = 0
10:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
3:4/0 = 0
3:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
4:4/0 = 0
4:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
5:4/0 = 0
5:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
6:4/0 = 0
6:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
7:4/0 = 0
7:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
8:4/0 = 0
8:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c81cj")
3:1/0 = 0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
3:2/0 = 0
3:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
4:1/0 = 0
4:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")
5:1/0 = 0
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_i4dot")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_bcyrs"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ixw5v"]
texture = ExtResource("2_wjeva")
texture_region_size = Vector2i(32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 64, -16, -16, 34, -16, 64, -16)
4:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -16, 16, -16, 16, 34, 16, 64)
7:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(14, 18, -14, 18, -14, -18, 14, -18)
3:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(18, -14, 18, 14, -18, 14, -18, -14)
1:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, 16, -16, 16, -16, -34, -16, -64)
4:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -64, 16, 16, -34, 16, -64, 16)
7:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:5/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:3/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:4/0/navigation_layer_1/polygon = SubResource("NavigationPolygon_bcyrs")

[sub_resource type="TileSet" id="TileSet_eodan"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
navigation_layer_1/layers = 1
sources/0 = SubResource("TileSetAtlasSource_4m84a")
sources/1 = SubResource("TileSetAtlasSource_ixw5v")
pattern_0 = SubResource("TileMapPattern_6mqhf")
pattern_1 = SubResource("TileMapPattern_i4dot")
pattern_2 = SubResource("TileMapPattern_c81cj")
pattern_3 = SubResource("TileMapPattern_bcyrs")

[node name="World 1-2" type="Node2D"]
script = ExtResource("1_wjeva")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD2//P/AAABAAEAAAD2//T/AAABAAEAAAD2//X/AAABAAEAAAD2//b/AAABAAEAAAD2//f/AAABAAEAAAD2//j/AAABAAEAAAD2//n/AAABAAEAAAD2//r/AAABAAEAAAD2//v/AAABAAEAAAD2//z/AAABAAEAAAD2//3/AAABAAEAAAD2//7/AAABAAEAAAD2////AAABAAEAAAD2/wAAAAABAAEAAAD2/wEAAAABAAEAAAD2/wIAAAABAAEAAAD2/wMAAAABAAEAAAD3//P/AAABAAEAAAD3//T/AAABAAEAAAD3//X/AAABAAEAAAD3//b/AAABAAEAAAD3//f/AAABAAEAAAD3//j/AAABAAEAAAD3//n/AAABAAEAAAD3//r/AAABAAEAAAD3//v/AAABAAEAAAD3//z/AAABAAEAAAD3//3/AAABAAEAAAD3//7/AAABAAEAAAD3////AAABAAEAAAD3/wAAAAABAAEAAAD3/wEAAAABAAEAAAD3/wIAAAABAAEAAAD3/wMAAAABAAEAAAD4//P/AAABAAEAAAD4//T/AAABAAEAAAD4//X/AAABAAEAAAD4//b/AAABAAEAAAD4//f/AAABAAEAAAD4//j/AAABAAEAAAD4//n/AAABAAEAAAD4//r/AAABAAEAAAD4//v/AAABAAEAAAD4//z/AAABAAEAAAD4//3/AAABAAEAAAD4//7/AAABAAEAAAD4////AAABAAEAAAD4/wAAAAABAAEAAAD4/wEAAAABAAEAAAD4/wIAAAABAAEAAAD4/wMAAAABAAEAAAD5//P/AAABAAEAAAD5//T/AAABAAEAAAD5//X/AAABAAEAAAD5//b/AAABAAEAAAD5//f/AAABAAEAAAD5//j/AAABAAEAAAD5//n/AAABAAEAAAD5//r/AAABAAEAAAD5//v/AAABAAEAAAD5//z/AAABAAEAAAD5//3/AAABAAEAAAD5//7/AAABAAEAAAD5////AAABAAEAAAD5/wAAAAABAAEAAAD5/wEAAAABAAEAAAD5/wIAAAABAAEAAAD5/wMAAAABAAEAAAD6//P/AAABAAEAAAD6//T/AAABAAEAAAD6//X/AAABAAEAAAD6//b/AAABAAEAAAD6//f/AAABAAEAAAD6//j/AAABAAEAAAD6//n/AAABAAEAAAD6//r/AAABAAEAAAD6//v/AAABAAEAAAD6//z/AAABAAEAAAD6//3/AAABAAEAAAD6//7/AAABAAEAAAD6////AAABAAEAAAD6/wAAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAEAAAD6/wMAAAABAAEAAAD7//P/AAABAAEAAAD7//T/AAABAAEAAAD7//X/AAABAAEAAAD7//b/AAABAAEAAAD7//f/AAABAAEAAAD7//j/AAABAAEAAAD7//n/AAABAAEAAAD7//r/AAABAAEAAAD7//v/AAABAAEAAAD7//z/AAABAAEAAAD7//3/AAABAAEAAAD7//7/AAABAAEAAAD7////AAABAAEAAAD7/wAAAAABAAEAAAD7/wEAAAABAAEAAAD7/wIAAAABAAEAAAD7/wMAAAABAAEAAAD8//P/AAABAAEAAAD8//T/AAABAAEAAAD8//X/AAABAAEAAAD8//b/AAABAAEAAAD8//f/AAABAAEAAAD8//j/AAABAAEAAAD8//n/AAABAAEAAAD8//r/AAABAAEAAAD8//v/AAABAAEAAAD8//z/AAABAAEAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AAABAAEAAAD8/wAAAAABAAEAAAD8/wEAAAABAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD9//P/AAABAAEAAAD9//T/AAABAAEAAAD9//X/AAABAAEAAAD9//b/AAABAAEAAAD9//f/AAABAAEAAAD9//j/AAABAAEAAAD9//n/AAABAAEAAAD9//r/AAABAAEAAAD9//v/AAABAAEAAAD9//z/AAABAAEAAAD9//3/AAABAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAEAAAD9/wEAAAABAAEAAAD9/wIAAAABAAEAAAD9/wMAAAABAAEAAAD+//P/AAABAAEAAAD+//T/AAABAAEAAAD+//X/AAABAAEAAAD+//b/AAABAAEAAAD+//f/AAABAAEAAAD+//j/AAABAAEAAAD+//n/AAABAAEAAAD+//r/AAABAAEAAAD+//v/AAABAAEAAAD+//z/AAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAEAAAD+////AAABAAEAAAD+/wAAAAABAAEAAAD+/wEAAAABAAEAAAD+/wIAAAABAAEAAAD+/wMAAAABAAEAAAD///P/AAABAAEAAAD///T/AAABAAEAAAD///X/AAABAAEAAAD///b/AAABAAEAAAD///f/AAABAAEAAAD///j/AAABAAEAAAD///n/AAABAAEAAAD///r/AAABAAEAAAD///v/AAABAAEAAAD///z/AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAAAAPP/AAABAAEAAAAAAPT/AAABAAEAAAAAAPX/AAABAAEAAAAAAPb/AAABAAEAAAAAAPf/AAABAAEAAAAAAPj/AAABAAEAAAAAAPn/AAABAAEAAAAAAPr/AAABAAEAAAAAAPv/AAABAAEAAAAAAPz/AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAP//AAABAAEAAAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAABAPP/AAABAAEAAAABAPT/AAABAAEAAAABAPX/AAABAAEAAAABAPb/AAABAAEAAAABAPf/AAABAAEAAAABAPj/AAABAAEAAAABAPn/AAABAAEAAAABAPr/AAABAAEAAAABAPv/AAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAACAPP/AAABAAEAAAACAPT/AAABAAEAAAACAPX/AAABAAEAAAACAPb/AAABAAEAAAACAPf/AAABAAEAAAACAPj/AAABAAEAAAACAPn/AAABAAEAAAACAPr/AAABAAEAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAADAPP/AAABAAEAAAADAPT/AAABAAEAAAADAPX/AAABAAEAAAADAPb/AAABAAEAAAADAPf/AAABAAEAAAADAPj/AAABAAEAAAADAPn/AAABAAEAAAADAPr/AAABAAEAAAADAPv/AAABAAEAAAADAPz/AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAAEAPP/AAABAAEAAAAEAPT/AAABAAEAAAAEAPX/AAABAAEAAAAEAPb/AAABAAEAAAAEAPf/AAABAAEAAAAEAPj/AAABAAEAAAAEAPn/AAABAAEAAAAEAPr/AAABAAEAAAAEAPv/AAABAAEAAAAEAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAFAPP/AAABAAEAAAAFAPT/AAABAAEAAAAFAPX/AAABAAEAAAAFAPb/AAABAAEAAAAFAPf/AAABAAEAAAAFAPj/AAABAAEAAAAFAPn/AAABAAEAAAAFAPr/AAABAAEAAAAFAPv/AAABAAEAAAAFAPz/AAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAFAP//AAABAAEAAAAFAAAAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAGAPP/AAABAAEAAAAGAPT/AAABAAEAAAAGAPX/AAABAAEAAAAGAPb/AAABAAEAAAAGAPf/AAABAAEAAAAGAPj/AAABAAEAAAAGAPn/AAABAAEAAAAGAPr/AAABAAEAAAAGAPv/AAABAAEAAAAGAPz/AAABAAEAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAHAPP/AAABAAEAAAAHAPT/AAABAAEAAAAHAPX/AAABAAEAAAAHAPb/AAABAAEAAAAHAPf/AAABAAEAAAAHAPj/AAABAAEAAAAHAPn/AAABAAEAAAAHAPr/AAABAAEAAAAHAPv/AAABAAEAAAAHAPz/AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAIAPP/AAABAAEAAAAIAPT/AAABAAEAAAAIAPX/AAABAAEAAAAIAPb/AAABAAEAAAAIAPf/AAABAAEAAAAIAPj/AAABAAEAAAAIAPn/AAABAAEAAAAIAPr/AAABAAEAAAAIAPv/AAABAAEAAAAIAPz/AAABAAEAAAAIAP3/AAABAAEAAAAIAP7/AAABAAEAAAAIAP//AAABAAEAAAAIAAAAAAABAAEAAAAIAAEAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAJAPP/AAABAAEAAAAJAPT/AAABAAEAAAAJAPX/AAABAAEAAAAJAPb/AAABAAEAAAAJAPf/AAABAAEAAAAJAPj/AAABAAEAAAAJAPn/AAABAAEAAAAJAPr/AAABAAEAAAAJAPv/AAABAAEAAAAJAPz/AAABAAEAAAAJAP3/AAABAAEAAAAJAP7/AAABAAEAAAAJAP//AAABAAEAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAKAPP/AAABAAEAAAAKAPT/AAABAAEAAAAKAPX/AAABAAEAAAAKAPb/AAABAAEAAAAKAPf/AAABAAEAAAAKAPj/AAABAAEAAAAKAPn/AAABAAEAAAAKAPr/AAABAAEAAAAKAPv/AAABAAEAAAAKAPz/AAABAAEAAAAKAP3/AAABAAEAAAAKAP7/AAABAAEAAAAKAP//AAABAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAAKAAIAAAABAAEAAAAKAAMAAAABAAEAAAALAPP/AAABAAEAAAALAPT/AAABAAEAAAALAPX/AAABAAEAAAALAPb/AAABAAEAAAALAPf/AAABAAEAAAALAPj/AAABAAEAAAALAPn/AAABAAEAAAALAPr/AAABAAEAAAALAPv/AAABAAEAAAALAPz/AAABAAEAAAALAP3/AAABAAEAAAALAP7/AAABAAEAAAALAP//AAABAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAAMAPP/AAABAAEAAAAMAPT/AAABAAEAAAAMAPX/AAABAAEAAAAMAPb/AAABAAEAAAAMAPf/AAABAAEAAAAMAPj/AAABAAEAAAAMAPn/AAABAAEAAAAMAPr/AAABAAEAAAAMAPv/AAABAAEAAAAMAPz/AAABAAEAAAAMAP3/AAABAAEAAAAMAP7/AAABAAEAAAAMAP//AAABAAEAAAAMAAAAAAABAAEAAAAMAAEAAAABAAEAAAAMAAIAAAABAAEAAAAMAAMAAAABAAEAAAANAPP/AAABAAEAAAANAPT/AAABAAEAAAANAPX/AAABAAEAAAANAPb/AAABAAEAAAANAPf/AAABAAEAAAANAPj/AAABAAEAAAANAPn/AAABAAEAAAANAPr/AAABAAEAAAANAPv/AAABAAEAAAANAPz/AAABAAEAAAANAP3/AAABAAEAAAANAP7/AAABAAEAAAANAP//AAABAAEAAAANAAAAAAABAAEAAAANAAEAAAABAAEAAAANAAIAAAABAAEAAAANAAMAAAABAAEAAAAOAPP/AAABAAEAAAAOAPT/AAABAAEAAAAOAPX/AAABAAEAAAAOAPb/AAABAAEAAAAOAPf/AAABAAEAAAAOAPj/AAABAAEAAAAOAPn/AAABAAEAAAAOAPr/AAABAAEAAAAOAPv/AAABAAEAAAAOAPz/AAABAAEAAAAOAP3/AAABAAEAAAAOAP7/AAABAAEAAAAOAP//AAABAAEAAAAOAAAAAAABAAEAAAAOAAEAAAABAAEAAAAOAAIAAAABAAEAAAAOAAMAAAABAAEAAAD1//L/AQAEAAEAAAD1//P/AQADAAIAAAD2//L/AQABAAQAAAAOAPL/AQABAAQAAAAPAPL/AQAHAAEAAAAOAAQAAQABAAQAAAAPAAQAAQAHAAQAAAD1/wMAAQADAAIAAAD1/wQAAQAEAAQAAAD2/wQAAQABAAQAAAD1//T/AQADAAIAAAD1//X/AQADAAIAAAD1//b/AQADAAIAAAD1//f/AQADAAIAAAD1//j/AQADAAIAAAD1//n/AQADAAIAAAD1//r/AQADAAIAAAD1//v/AQADAAIAAAD1//z/AQADAAIAAAD1//3/AQADAAIAAAD1//7/AQADAAIAAAD1////AQADAAIAAAD1/wAAAQADAAIAAAD1/wEAAQADAAIAAAD1/wIAAQADAAIAAAD3/wQAAQABAAQAAAD4/wQAAQABAAQAAAD5/wQAAQABAAQAAAD6/wQAAQABAAQAAAD7/wQAAQABAAQAAAD8/wQAAQABAAQAAAD9/wQAAQABAAQAAAD+/wQAAQABAAQAAAD//wQAAQABAAQAAAAAAAQAAQABAAQAAAABAAQAAQABAAQAAAACAAQAAQABAAQAAAADAAQAAQABAAQAAAAEAAQAAQABAAQAAAAFAAQAAQABAAQAAAAGAAQAAQABAAQAAAAHAAQAAQABAAQAAAAIAAQAAQABAAQAAAAJAAQAAQABAAQAAAAKAAQAAQABAAQAAAALAAQAAQABAAQAAAAMAAQAAQABAAQAAAANAAQAAQABAAQAAAD3//L/AQABAAQAAAD4//L/AQABAAQAAAD5//L/AQABAAQAAAD6//L/AQABAAQAAAD7//L/AQABAAQAAAD8//L/AQABAAQAAAD9//L/AQABAAQAAAD+//L/AQABAAQAAAD///L/AQABAAQAAAAAAPL/AQABAAQAAAABAPL/AQABAAQAAAACAPL/AQABAAQAAAADAPL/AQABAAQAAAAEAPL/AQABAAQAAAAFAPL/AQABAAQAAAAGAPL/AQABAAQAAAAHAPL/AQABAAQAAAAIAPL/AQABAAQAAAAJAPL/AQABAAQAAAAKAPL/AQABAAQAAAALAPL/AQABAAQAAAAMAPL/AQABAAQAAAANAPL/AQABAAQAAAAPAPP/AQADAAIAAAAPAPT/AQADAAIAAAAPAPX/AQADAAIAAAAPAPb/AQADAAIAAAAPAPf/AQADAAIAAAAPAPj/AQADAAIAAAAPAPn/AQADAAIAAAAPAPr/AQADAAIAAAAPAPv/AQADAAIAAAAPAPz/AQADAAIAAAAPAP3/AQADAAIAAAAPAP7/AQADAAIAAAAPAP//AQADAAIAAAAPAAAAAQADAAIAAAAPAAEAAQADAAIAAAAPAAIAAQADAAIAAAAPAAMAAQADAAIAAAA=")
tile_set = SubResource("TileSet_eodan")

[node name="EnemySpawn" type="Marker2D" parent="."]
position = Vector2(758, -714)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(-496, 113)

[node name="Portal" parent="." instance=ExtResource("4_4m84a")]
position = Vector2(175, -310)

[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
